--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:26057",
-      "sslPort": 44380
+      "applicationUrl": "http://localhost:18302",
+      "sslPort": 44371
     }
   },
   "profiles": {
-    "ProjetoFront": {
+    "FrontExample": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7238;http://localhost:5100",
+      "applicationUrl": "https://localhost:7152;http://localhost:5150",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
